# filesplit

./: .gitignore  Cargo.toml  README.md  config.toml  digua.txt  teeoff234.txt  wgg7703g.txt
docs/: about002.drawio  another.md  example-toml  note.md  s.txt  toml-version.drawio
gui/first/: first.sln
gui/first/first/: Form1.Designer.cs  Form1.cs  Program.cs  first.csproj  frmain.Designer.cs  frmain.cs
gui/first/first/Properties/: AssemblyInfo.cs  Resources.Designer.cs
src/: checkresult.rs  conf.rs  config.rs  configbak.bak  environment.rs  fns.rs  lib.rs  main.rs  splitfile.rs
tests/: testtomlfile.rs
