[package]
name = "filesplit"
version = "0.0.1"
authors = ["rdigua <digua@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.6"
serde = { version = "1.0", features = ["derive"]}
# toml="0.5.7"
# clap = "3.0.0-beta.2"